plugins/groovy/testdata/highlighting/pre30/negatedIn.groovy
a <error descr="Negated 'in' is not supported in current version">!</error>in b
